test/types/unions/union-typelessField.good
union-typelessField.chpl:2: error: union fields must have an explicit type
